# AVR-VMC-FlightControl-Module

./: .pre-commit-config.yaml  Dockerfile  README.md  package-lock.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
dev/: docker-compose.yml
dev/px4_sitl/: Dockerfile  entrypoint.sh
src/: api_stuff  entrypoint.sh  fcc_control.py  fcc_hil_gps.py  fcc_library.py  fcc_mavlink.py  fcc_mission.py  fcc_telemetry.py  fcm.py
