[tool.poetry]
    name        = "bell-avr-vmc-flightcontrol-module"
    version     = "0.1.0"
    description = "Flight control computer module for Bell AVR"
    license     = "MIT"
    readme      = "README.md"
    homepage    = "https://github.com/bellflight/AVR-VMC-FlightControl-Module"
    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]

[tool.poetry.dependencies]
    python             = ">=3.9,<3.13"
    loguru             = "0.7.2"
    bell-avr-libraries = "0.2.0a7"
    mavsdk             = "2.0.0"
    bell-avr-pymavlink = "2.4.25"
    pymap3d            = "3.0.1"

[tool.poetry.group.dev.dependencies]
    pre-commit = "3.6.0"
    nptyping   = "2.5.0"

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true
